--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/materialize-css": "^1.0.6",
     "core-js": "^2.5.4",
     "materialize-css": "^1.0.0-rc.2",
+    "ngx-masonry": "^1.1.2",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
