Got the rework done of isotope
Signed-off-by: Sean Pimentel <sean_pimentel@hotmail.com>

--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@types/imagesloaded": "^4.1.1",
+    "@types/isotope-layout": "^3.0.7",
     "@types/materialize-css": "^1.0.6",
     "core-js": "^2.5.4",
+    "imagesloaded": "^4.1.4",
+    "isotope-layout": "^3.0.6",
     "materialize-css": "^1.0.0-rc.2",
-    "ngx-masonry": "^1.1.2",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
