--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,9 @@
               "node_modules/materialize-css/dist/css/materialize.css"
             ],
             "scripts": [
-              "node_modules/materialize-css/dist/js/materialize.js"
+              "node_modules/materialize-css/dist/js/materialize.js",
+              "node_modules/isotope-layout/dist/isotope.pkgd.js",
+              "node_modules/imagesloaded/imagesloaded.pkgd.js"
             ]
           },
           "configurations": {
