Sorting and filtering on projects should be done...?
Signed-off-by: Sean Pimentel <sean_pimentel@hotmail.com>

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "imagesloaded": "^4.1.4",
     "isotope-layout": "^3.0.6",
     "materialize-css": "^1.0.0-rc.2",
+    "moment": "^2.24.0",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
