--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,7 @@
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
-      "prefix": "app",
+      "prefix": "pio",
       "schematics": {
         "@schematics/angular:component": {
           "styleext": "scss"
