--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --open",
-    "build": "ng build",
-    "build:prod": "ng build --prod",
+    "start": "ng serve --open --aot",
+    "build": "ng build --aot --buildOptimizer",
+    "build:prod": "ng build --prod --aot --buildOptimizer",
+    "build:deploy:prod": "ng build --prod --aot --buildOptimizer",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -21,14 +22,12 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
-    "@types/imagesloaded": "^4.1.1",
-    "@types/isotope-layout": "^3.0.7",
-    "@types/materialize-css": "^1.0.6",
     "core-js": "^2.5.4",
     "imagesloaded": "^4.1.4",
     "isotope-layout": "^3.0.6",
     "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.24.0",
+    "quill": "^1.3.6",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
@@ -37,9 +36,14 @@
     "@angular/cli": "~6.2.5",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
+    "@types/imagesloaded": "^4.1.1",
+    "@types/isotope-layout": "^3.0.8",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/materialize-css": "^1.0.6",
     "@types/node": "~8.9.4",
+    "@types/quill": "^2.0.2",
+    "angular-cli-ghpages": "^0.5.3",
     "codelyzer": "~4.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
